--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
+    "twilio": "^5.5.2"
   }
 }
